--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-ses==3.2.0
 django-widget-tweaks==1.4.12
 jmespath==1.0.1
 python-dateutil==2.8.2
+python-decouple==3.6
 pytz==2022.4
 s3transfer==0.6.0
 six==1.16.0
