--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.5.2
 boto3==1.24.90
 botocore==1.27.90
 Django==4.0.6
+django-etc==1.4.0
+django-hitcount==1.3.5
 django-ses==3.2.0
 django-widget-tweaks==1.4.12
 jmespath==1.0.1
